...

    <ImageView
        android:id="@+id/iv_cs_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
...

                    <TextView
                        android:id="@+id/tv_cs_nativename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_callingcodes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_alpah2code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_alpah3code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_languages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_capital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_population"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_timezones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/tv_cs_borders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/ll_currencies_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/sp_cs_base_exchange"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/sp_cs_country_exchange"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tv_cs_currency_exchange_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...
